[package]
name = "file_extent"
version = "0.1.0"
authors = ["Nick Alexeev <nickalexeev@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
anyhow = "1.0.34"
thiserror="1.0.22"
traits={path="../traits"}
