[package]
name = "graph"
version = "0.1.0"
authors = ["Nick Alexeev <nickalexeev@protonmail.com>"]
edition = "2018"

[dependencies]
variable_storage={path="../variable_storage"}
table = {path="../table"}
dyn-clone="1.0.3"
dyn-clonable="0.9.0"
traits={path="../traits"}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
