[package]
name = "macro_lib"
version = "0.1.0"
authors = ["Nick Alexeev <nickalexeev@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn ={version= "1.0",features=["derive"]}
quote = "1.0"
sha2="0.9.2"

[lib]
proc-macro = true
