[package]
name = "traits"
version = "0.1.0"
authors = ["Nick Alexeev <nickalexeev@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone="1.0.3"
dyn-clonable="0.9.0"
macro_lib={path="../macro_lib"}
